--- a/index.html
+++ b/index.html
@@ -175,6 +175,7 @@
        <hr>
     </main>
     <footer>
+
         
         <p class="contact">
             <address>
@@ -203,10 +204,14 @@
           
               <script src="script.js"></script>
         </p>
+        <hr>
         <p class="docs"></p>
         <p class="liens">
-            <link rel="stylesheet" href="lesou.inscriptions@gmail.com">
+            <article a href="mailto:lesou.inscriptions@gmail.com">Lien facebook</a>
+            <article> <a href="http://www.roquemaure.fr/">Lien Mairie de Roquemaure</a></article>    
         </p>
+
+        <p>@Copyright 2022</p>
 
     </footer>
 </body>
