add file and icone

--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
                     <img src="images/logo1.png" alt="Logo" class="logo" width="100" />
                     <img src="images/img-fond.jpg" alt="image de fond" class="Image de fond" />
                     <img src="images/ecole-prim-1.jpg" alt="ecole primaire" class="ecole primaire" />
-                    <img src="images/img-fd-2.jpg" alt="image de fond2" class="Image de fond2" />
-                    <img src="images/ecole-mat-1.jpg" alt="ecole maternelle" class="Ecole maternelle" />
                     <img src="images/img-fd-3.jpg" alt="image de fond3" class="Image de fond3" />
+                    <img src="images/ecole-mat-1.jpg" alt="ecole maternelle" class="Ecole maternelle" />
+                    <img src="images/img-fd-2.jpg" alt="image de fond2" class="Image de fond2" />
 
             <!-- mettre les imgs les uns à côté des autres dans une couleur de fond avec le titre par dessus "" -->
     
@@ -109,7 +109,7 @@
                     <div class="calendar">
                         <h2 id="agenda">Nos futures manifestations</h2>
                         <ul>
-                            <li><iframe id="iframePreview" src="https://calendar.google.com/calendar/embed?height=600&amp;wkst=1&amp;bgcolor=%23ffffff&amp;ctz=Europe%2FParis&amp;src=MTg1NzNkYjU0YTgxOWZhMGU3NGZkNDJkNDhmZWRhZWVmNzg2YjkzMjAzMzU2NjU5NDM3YmU0ZDRjMDkyOTYxMUBncm91cC5jYWxlbmRhci5nb29nbGUuY29t&amp;src=ZnIuZnJlbmNoI2hvbGlkYXlAZ3JvdXAudi5jYWxlbmRhci5nb29nbGUuY29t&amp;color=%234285F4&amp;color=%230B8043" style="border:solid 1px #777" scrolling="no" width="800" height="600" frameborder="0">
+                            <li><iframe id="iframePreview" src="https://calendar.google.com/calendar/embed?height=600&amp;wkst=1&amp;bgcolor=%23ffffff&amp;ctz=Europe%2FParis&amp;src=MTg1NzNkYjU0YTgxOWZhMGU3NGZkNDJkNDhmZWRhZWVmNzg2YjkzMjAzMzU2NjU5NDM3YmU0ZDRjMDkyOTYxMUBncm91cC5jYWxlbmRhci5nb29nbGUuY29t&amp;src=ZnIuZnJlbmNoI2hvbGlkYXlAZ3JvdXAudi5jYWxlbmRhci5nb29nbGUuY29t&amp;color=%234285F4&amp;color=%230B8043" style="border:solid 1px #777" scrolling="no" width="500" height="600" frameborder="0">
                             </iframe></li>
                             <li><img src="images/Flyer-Manif.jpg" alt="évènements" class="events" width="400" height="600"/>    
                             </li>
@@ -164,8 +164,8 @@
                     </div>
                     <div id="liens">
                         <ul>
-                            <p>Visiter notre <a href="https://facebook.com/wildcodeschool" title="Retrouvez toute l'actualité du Sou des écoles et les derners événements sur notre page Facebook" target="_blank">page facebook</a></p>
-                            <p>Visiter le site de la <a href="http://www.roquemaure.fr/" target="_blank">Mairie de Roquemaure</a></p>
+                            <p> <img src="images/logo-fb.jpg" alt="" width="25"> Visiter notre <a href="https://facebook.com/wildcodeschool" title="Retrouvez toute l'actualité du Sou des écoles et les derners événements sur notre page Facebook" target="_blank">page facebook</a></p>
+                            <p> <img src="images/image003.jpg" alt="" width="25"> Visiter le site de la <a href="http://www.roquemaure.fr/" target="_blank">Mairie de Roquemaure</a></p>
                         </ul>
                     </div>
                 </section>
@@ -189,8 +189,7 @@
                             <span>Défiler vers le haut</span>
                         </a>
                     </li>
-                    <script>// <![CDATA[window.regModule("common_scrolltotop", []);// ]]>
-                    </script>
+                  
                 </ul>
 
                 </div id="fin">
