--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <div class="banniere-sou">
                     <h1><img src="images/logo1.png" alt="Logo" class="logo" width="100" />Le Sou des Ecoles de Roquemaure</h1>
                 </div>
-                <article class="carousel">
+                <article class="immage-sou">
                     <img src="images/img-fond.jpg" alt="image de fond" class="Image de fond" />
                     <img src="images/ecole-prim-1.jpg" alt="ecole primaire" class="ecole primaire" />
                     <img src="images/img-fd-3.jpg" alt="image de fond3" class="Image de fond3" />
@@ -124,7 +124,7 @@
                     <p>Télécharger vos dossiers ici</p>
                     <p><a href="docs/lettre marché de noël  2022.docx">Dossier inscription Marché de Noël</a></p>
                     <p><a href="mailto:lesou.inscriptions@gmail.com">Envoyer vos inscriptions ici</a></p>    
-                      <!-- Revoir l'alignement des liens, ajouter des logos-->
+                    <!-- Revoir l'alignement des liens, ajouter des logos-->
                 </div>
             </section>
                     <!-- Mettre des boutons pour l'envoi/téléchargement des docs -->
