--- a/new.html
+++ b/new.html
@@ -115,6 +115,7 @@
                 <div id="item-8">
                     <br>
                         <h2><img src="images/icone/ico-contact.png" alt="" class="ico-categorie" />Contactez-nous</h2>
+                        <div id="contact">
                             <form id="contactForm">
                                 <label for="name">NOM et Prénom :</label><br />
                                     <input type="text" id="name" name="Name" value="example" /><br />
@@ -130,6 +131,7 @@
                                         <br /><br />
                                     <input type="submit" value="Submit" />
                             </form>
+                        </div>
                 </div>
                 <div id="item-9">
                         <article class="telecharge">
