problem affichage hover

--- a/index.html
+++ b/index.html
@@ -132,8 +132,8 @@
                             <h2>Les prochaines dates en affiche:</h2>
                             <p><img src="images/affiches/ag/ag.jpg" alt="ag" class="Affiche assemblée générale"></p>
                             <p><img src="images/affiches/prochaine/Vide Placard Petite Enfance.jpg" alt="affiche vide placard" class="card"></p>
-                            <p><img src="images/affiches/prochaine/Marché de Noël.jpg" alt="noël" class="Affiche marché de noel"></p>
-                            <p><img src="images/affiches/prochaine/image diots.JPG" alt="diots" class="Affiche restauration marché de noel"></p>
+                            <p><img src="images/affiches/prochaine/Marché de Noël.jpg" alt="noël" class="card"></p>
+                            <p><img src="images/affiches/prochaine/image diots.JPG" alt="diots" class="card"></p>
                         </article>
                     </aside> 
             </div>
