rectify txt project

--- a/index.html
+++ b/index.html
@@ -95,13 +95,13 @@
                         Il est important d’y assiter afin de partager vos interrogations et même vos idées. <br>
                         A ce jour, nous avons soutenu de nombreux projets que ce soit culturels, des classes vertes, etc.. <br>
                         <strong>- Comment çà marche :</strong> <br>
-                    * Chaque année nous donnons une subventsion systématique de 12 euros / enfants scolarisés à Roquemaure soit  à l’école primaire ou soit à l’école maternelle. <br>
+                    * Chaque année nous donnons une subvension de 12 euros / enfants scolarisés à Roquemaure soit à l’école primaire ou soit à l’école maternelle. <br>
                     * Ensuite, pour les enseignants qui décident de monter un projet pour leur classe, nous apportons une subvention dite « exceptionnelles ». <br>
                     * S’il s’agit d’une classe verte, d’un voyage qui inclus des nuitées, nous attribuons également une autre subvention exceptionnelles.
 
-                        De nombreux  projets ont pu voir le jour grâce au soutien de l’association. Le Sou des écoles de cette façon contribue également à ce que les familles aient le moins de frais possible à débourser. <br> Il y aura une participation des familles mais celle-ci sera la plus minime possible.
+                        De nombreux projets ont pu voir le jour grâce au soutien de l’association. Le Sou des écoles de cette façon contribue également à ce que les familles aient le moins de frais possible à débourser. <br> Il y aura une participation des familles mais celle-ci sera la plus minime possible.
 
-                        L’apport de notre contributio aux écoles, ne peux se faire sans notre dévouement et sans nos manifestations. Alors venez nombreux pour nous soutenir.
+                        L’apport de notre contribution aux écoles, ne peux se faire sans notre dévouement et sans nos manifestations. Alors venez nombreux pour nous soutenir.
 
                         <br>
                         <strong>- Voici quelques projets réalisés :</strong> <br>
